--- a/serialization_.ipynb
+++ b/serialization_.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSR7cHXWfrU8ylMUKX1KN1",
+      "authorship_tag": "ABX9TyNpvUa5WFkQ6Hjowf06tagq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -75,13 +75,16 @@
       }
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "source": [
-        "Json"
+        "serialization = pickle.dump(obj,file)\n",
+        "deserialization = pickle.load(file)"
       ],
       "metadata": {
-        "id": "XbyEaqWy1_st"
-      }
+        "id": "tb_sImEhNdtS"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -101,6 +104,15 @@
       "metadata": {
         "id": "SHJA5e0b1Fy5"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "wCtFLN-qNbNB"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
